# llm-ttcc-team-pro

./: .env.example  CLAUDE.md  LICENSE  README.md  RUN.md  Technical_Training_Course_Creator_System_Prompt.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
backend/: Dockerfile  __init__.py  auth.py  config.py  council.py  entrypoint.sh  file_parser.py  gdrive.py  main.py  ollama.py  openrouter.py  runtime_settings.py  storage.py  tools.py
backend/tests/: test_council_router_type.py  test_execution_modes.py  test_json_storage_concurrency.py  test_router_per_conversation_storage.py  test_runtime_settings.py  test_runtime_settings_api.py  test_runtime_settings_integration.py  test_stage_timeout_cancellation.py  test_streaming_disconnect.py  test_tool_heuristics.py
docs/plans/: 2026-01-09-jacob-features.md  2026-01-09-runtime-settings-prompts-temperatures.md
frontend/: .env.example  index.html  nginx.conf  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  LoginScreen.jsx  ModelSelector.jsx  SettingsModal.css  SettingsModal.jsx  SetupWizard.jsx  Sidebar.css  Sidebar.jsx
frontend/src/store/: authStore.js
frontend/src/utils/: exportMarkdown.js  timing.js
nginx/: nginx.conf
