[project]
name = "llm-ttcc-team-pro"
version = "1.4.0"
description = "LLM-TTCC-TEAM-PRO - Multi-LLM deliberation and technical training course creation system"
authors = [{name = "LLM-TTCC-TEAM-PRO Contributors"}]
license = {text = "MIT"}
keywords = ["llm", "ai", "council", "multiple-models", "openrouter", "chatbot"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    # Feature 2: Database support
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pymysql>=1.1.0",          # MySQL
    # Feature 4: Tools (FREE)
    "wikipedia>=1.4.0",
    "arxiv>=2.0.0",
    "duckduckgo-search>=4.0.0",
    "yfinance>=0.2.0",
    # Optional LangChain integration
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "python-multipart>=0.0.21",
    "ddgs>=9.10.0",
    "pyjwt>=2.11.0",
    "bcrypt>=5.0.0",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.2.9",
    "google-api-python-client>=2.189.0",
    "google-auth>=2.45.0",
    "python-toon>=0.1.3",
    "tiktoken>=0.12.0",
    "exa-py>=2.3.0",
    "tavily-python>=0.7.21",
]

[project.optional-dependencies]
# Heavy ML deps (torch) - only install where supported (not macOS Intel x86_64)
embeddings = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
